--- a/WebBrowser.UI/WebBrowser.UI.csproj
+++ b/WebBrowser.UI/WebBrowser.UI.csproj
@@ -8,4 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WebBrowser.Logic\WebBrowser.Logic.csproj" />
+  </ItemGroup>
+
 </Project>
